<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RFM</string>


    <!-- Sample Main Activity -->
    <string name="item_deleted">Item Deleted</string>
    <string name="main_activity_title">RFM Sample</string>
    <string name="native_main_activity_title">Native Ads Sample</string>
    <string name="preset">PRESET</string>
    <string name="user_defined">USER DEFINED</string>
    <string name="header">Header</string>

    <!-- Add test case -->
    <string name="menu_add_test_case">Add Test Case</string>
    <string name="add_test_case">Add Test Case</string>
    <string name="test_case_name">Test Case Name</string>
    <string name="rfm_server_name">RFM Server Name</string>
    <string name="rfm_pub_id">RFM Pub ID</string>
    <string name="rfm_app_id">RFM App ID</string>
    <string name="rfm_ad_id">RFM Ad ID</string>
    <string name="rfm_server">http://mrp.rubiconproject.com</string>

    <!-- menu -->
    <string name="settings">Settings</string>
    <string name="save_settings">Test Case Settings</string>

    <!-- About screen constants -->
    <string name="rfm_sdk_version">RFM SDK Version</string>
    <string name="sample_app_version">Sample App Version</string>
    <string name="about">About</string>

    <!-- Settings Activity -->
    <string name="seperator_refresh">REFRESH</string>
    <string name="refresh_count">Refresh Count</string>
    <string name="refresh_interval">Refresh Interval (ms)</string>
    <string name="location_seperator">LOCATION TARGETING</string>
    <string name="location_latitude">Latitude</string>
    <string name="location_longitude">Longitude</string>
    <string name="location_type">Location Type</string>
    <string name="text_zero">0</string>
    <string name="size">SIZE</string>
    <string name="width">Width(dp)</string>
    <string name="height">Height(dp)</string>
    <string name="device_width">Device Width</string>
    <string name="custom_width">Custom Width</string>
    <string name="device_height">Device Height</string>
    <string name="custom_height">Custom Height</string>
    <string name="test_settings">TEST SETTINGS</string>
    <string name="test_mode_enable">Test Mode Enable</string>
    <string name="test_ad_id">Test Ad ID</string>
    <string name="ad_id_rfm_text">Ad ID of RFMAd to be fetched</string>
    <string name="full_screen">Fullscreen Ad</string>
    <string name="cached_ad">Cached Ad</string>
    <string name="video_ad">Video Ads</string>

    <!-- alert messages -->
    <string name="db_upload_success">SUCCESS: created test cases from json file!</string>
    <string name="db_upload_failure">FAILURE: failed to parse json file!</string>
    <string name="json_file_not_found">FAILURE: input json file not found!</string>
    <string name="json_file_no_permission">FAILURE: failed to read input json due to missing permission!</string>


    <!-- Simple banner Activity -->
    <string name="site_id">Site ID:</string>
    <string name="app_id">App ID: %s</string>
    <string name="counters">Counters</string>
    <string name="counter_text">Requests : 0\nSuccess : 0\nFailure : 0</string>
    <string name="default_stats_console_text">Sample App Ad Status \n---------------------------------------\n</string>
    <string name="logs">Logs</string>


    <!-- Values used in Demo activities -->
    <string name="getAd">Get Ad</string>
    <string name="getLocation">Get Location</string>
    <string name="clearConsole">Clear Console</string>
    <string name="defaultConsoleText">Sample App Ad Status \n--------------------------------\n</string>

    <string name="displaycachedad">Display Cached Ad</string>
    <string name="displayad">Display Ad</string>
    <string name="loadmore"> Load More </string>
    <string name="refresh"> Refresh </string>
    <string name="label_title">Title</string>

</resources>
