<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<RelativeLayout
	android:id="@+id/toplayout"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<Button
		android:id="@+id/getadbuttonone"
		android:layout_width="wrap_content"
		android:layout_height="50dp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="20dp"
		android:text="@string/getAd" 
		android:textSize="14sp" 
		android:layout_alignParentLeft="true"/>
		
	<Button
		android:id="@+id/getlocationone"
		android:layout_width="wrap_content"
		android:layout_height="50dp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="20dp"
		android:text="@string/getLocation" 
		android:textSize="14sp" 
		android:layout_toRightOf="@id/getadbuttonone"/>
		
	<Button
		android:id="@+id/clearconsoleone"
		android:layout_width="wrap_content"
		android:layout_height="50dp"
		android:layout_toRightOf="@id/getlocationone"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="20dp"
		android:text="@string/clearConsole" 
		android:textSize="14sp" />
</RelativeLayout>
   <TextView 
    android:id="@+id/debugconsoleviewone" 
    android:layout_margin="20dp"
    android:layout_width="fill_parent" 
    android:layout_height="100dp"
    android:scrollbars = "vertical"
    android:maxLines = "10"
	android:typeface="monospace"
    android:textColor="#000000"
    android:textSize = "11sp"
    android:text="@string/defaultConsoleText"
   >
    
   </TextView>

   <ListView
       android:id="@+id/listobj"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent"
       android:layout_margin="5dp"
       android:divider="#b5b5b5"
       android:dividerHeight="1dp"
       android:transcriptMode="alwaysScroll"
       />

</LinearLayout>
