<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/white_header" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTextView"
                android:text="@string/seperator_refresh" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/white">

                <android.support.design.widget.TextInputLayout style="@style/SettingItemTextInput">

                    <EditText
                        android:id="@+id/refresh_count_editext"
                        style="@style/SettingItemEditText"
                        android:digits="0123456789"
                        android:hint="@string/refresh_count"
                        android:inputType="number"
                        android:maxLength="6"
                        android:text="@string/text_zero" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/item_shadow">

                <android.support.design.widget.TextInputLayout style="@style/SettingItemTextInput">

                    <EditText
                        android:id="@+id/refresh_interval_editext"
                        style="@style/SettingItemEditText"
                        android:digits="0123456789"
                        android:hint="@string/refresh_interval"
                        android:inputType="number"
                        android:maxLength="9"
                        android:text="@string/text_zero" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <TextView
                style="@style/HeaderTextView"
                android:text="@string/location_seperator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/location_type_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/location_type"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/location_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/location_type_textview" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_background" />

            <LinearLayout
                android:id="@+id/location_lat_long_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white">

                    <android.support.design.widget.TextInputLayout style="@style/SettingItemTextInput">

                        <EditText
                            android:id="@+id/location_latitude_editext"
                            style="@style/SettingItemEditText"
                            android:hint="@string/location_latitude"
                            android:inputType="numberSigned|numberDecimal"
                            android:maxLength="50"
                            android:text="@string/text_zero" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/default_background" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/item_shadow">

                    <android.support.design.widget.TextInputLayout style="@style/SettingItemTextInput">

                        <EditText
                            android:id="@+id/location_longitude_editext"
                            style="@style/SettingItemEditText"
                            android:hint="@string/location_longitude"
                            android:inputType="numberSigned|numberDecimal"
                            android:maxLength="50"
                            android:text="@string/text_zero" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>